k8s/kubernetes/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs
  namespace: docs
  labels:
    app: docs
spec:
  selector:
    app: docs
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
